# RNA-embeddings-DRLMSA

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh  temp.ipynb
DPAMSA/: MSADataset.py  config.py  env.py  main.py  mainrun.py  temp.ipynb
Renata-DQN/: generate_embeddings_demo.ipynb  main_runscript.py  optimize_runscript.py  train_dqn.ipynb  train_dqn_col_based.ipynb  train_dqn_orig.ipynb
result/score/: testing_log.csv  training_log.csv
result/weight/: best_cs_meta.json
