[project]
name = "rna-embeddings-drlmsa"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonLi1001"},
    {name = "BasilJ-S"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "optuna (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
