[project]
name = "rna-embeddings-drlmsa"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonLi1001"},
    {name = "BasilJ-S"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "numpy (>=1.20.0,<2.3.5)",
    "matplotlib (>=3.3.0,<3.10.7)",
    "torch (>=1.10,<2.9)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.0,<1.7)",
    "fairseq (>=0.12.2,<0.13.0)"
    ]
    
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
